chore: update bin

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "image-compressor-cli",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "bin": {
-    "compress-images": "index.js"
+    "image-compressor-cli": "index.js"
   },
   "repository": {
     "type": "git",
