--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "image-compressor-cli",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -11,8 +11,7 @@
     "url": "https://github.com/AlexJeeee/image-compressor-cli.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "preinstall": "npx only-allow npm"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "jpeg",
